[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vctl-core"
version = "0.1.0"
description = "Core utilities for remote vehicle/simulation controls."
authors = [{ name = "Metehan Selvi", email = "me@metw.cc" }]
readme = "README.md"
license = { file = "LICENSE" }

[tool.hatch.build]
packages = ["gz_ctl", "mock_sim"]
